--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "sirv-cli": "^2.0.0",
     "socket.io-client": "^4.4.1",
+    "svelte-material-icons": "^1.0.3",
     "sveltestrap": "^5.8.3"
   }
 }
