--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,11 @@ jobs:
         npm ci
         npm run build
     - name: Build server
-      run: pyinstaller app.py --add-data "dashboard;dashboard"
+      run: |
+        cd dashboard
+        FOR %f IN (*.*) DO IF NOT [%f]==[public] DEL /Q %f
+        cd ..
+        pyinstaller app.py --add-data "dashboard;dashboard"
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
