--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,12 +41,10 @@ jobs:
         npm run build
     - name: Build server
       run: |
-        cd dashboard
-        FOR %f IN (*.*) DO IF NOT [%f]==[public] DEL /Q %f
-        cd ..
         pyinstaller app.py --add-data "dashboard;dashboard"
+        7z a -tzip dist.zip dist
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
         name: Server build
-        path: dist
+        path: dist.zip
